--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       "Hey..",
       "It's been [Time]",
       "All this time to end up being 5'4 wow",
-      "Congrats devil's child on surviving another year <3",
+      "Congrats devil's child (well close enough) on surviving another year <3",
       "Happy Birthday Janvi"
     ];
 
